# simple-xr2vmc

./: Cargo.toml  Makefile  Readme.md
src/: main.rs  xr.rs
