[package]
name = "simple-xr2vmc"
version = "0.1.0"
edition = "2021"

authors = ["Lukas Lichten <lichtenrider98@gmail.com>"]
description = "A lightweight Linux OpenXR motion capture utility that outputs via the VMC Protocol"
readme = "README.md"
license = "GPL-3"
repository = "https://github.com/LukasLichten/simple-xr2vmc"
keywords = ["openxr","vmc","vtuber","motion-capture"]
categories = ["command-line-utilities"]

[dependencies]
dirs = "^5"
log = "^0.4"
env_logger="0.10"
tokio = { version = "^1.41", features = ["full"] }
mint = "0.5.9"
openxr = { git = "https://github.com/Ralith/openxrs", branch = "master", features = ["linked", "mint"] }
vmc = { git = "https://github.com/pykeio/vmc", branch = "main" }
gltf = { version = "^1.4", features = ["utils", "extensions"]}
vrm-spec = { version = "0.0.3", features = ["gltf_index", "rustc_hash"]}
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
k = "^0.32" # Inverse Kinematics library
nalgebra = { version = "^0.30", features = ["convert-mint"] }
